--- a/tchat/src/main/resources/application.properties
+++ b/tchat/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 # suite du TP
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+#Spring Security
+logging.level.org.springframework.security=DEBUG
+#VERSION SPRING MVC
+#spring.security.user.name=aaa
+#spring.security.user.password=bbb
+
+#VERSION SPRING REACTIVE (Avec lib WebFlux et spring.main.web-application-type=reactive)
+#spring.main.allow-bean-definition-overriding=true
